Fixed spirits spacing/sizing

--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -217,8 +217,8 @@ body {
 }
 
 .spirit-items li{
-  width: 250px;
-  height: 150px;
+  width: 220px;
+  height: 200px;
   float: left;
   text-align: center;
 }
